# CMakeCourse

./: .gitignore  CMakeLists.txt  Machine1conf.h.in  configure.sh  install.sh  main.cpp  run.sh
MachineLib/: CMakeLists.txt  Function.cpp  Function.hpp
